# callCoreMLFromCppOrPython

./: .gitignore  CMakeLists.txt  convert_whisper_encoder_to_coreml.py
